# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CPURenderer.cpp  CPURenderer.h  Camera.cpp  Camera.h  ErrorCheck.cpp  ErrorCheck.h  GPURenderer.cpp  GPURenderer.h  HitInfo.h  Kernels.cu  Kernels.h  Material.h  Ray.h  RayTracerApp.cpp  RayTracerApp.h  Renderer.h  Scene.h  TracingRoutines.cu  TracingRoutines.h  Utils.h  main.cpp
src/core/: App.cpp  App.h  Image.cpp  Image.h  Input.cpp  Input.h  Timer.cpp  Timer.h
